# opensa-plugin

./: .gitignore  .gitmodules  Address_Map.cpp  Address_Map.h  CMakeLists.txt  README.md  Readme.md  SADIR_logfile.cpp  SA_Config.h.in  Virtual_ENV.cpp  Virtual_ENV.h  address_map.cpp  address_map.h  opensa_logger.cpp  opensa_logger.h  opensa_objects.h  plugin_load_thread.cpp  sa_config.h.in  sadir_logfile.cpp  virtual_env.h
game/: Game_Context.cpp  Game_Hooks.h  Hooks_Cortex.cpp  MainMenu_Hooks.cpp  Texture_Runtime.cpp  game_context.cpp  game_hooks.h  hooks_cortex.cpp  main_menu_hooks.cpp  texture_db.h  texture_runtime.cpp
scripts/: opensa.py
smali/: GTASA.smali
